--- a/fr_FR/Bundle_fr.properties
+++ b/fr_FR/Bundle_fr.properties
@@ -1,5 +1,5 @@
 dataverse=Collection
-newDataverse=Nouveau collection
+newDataverse=Nouvelle collection
 hostDataverse=Collection hôte
 dataverses=Collections
 passwd=Mot de passe
@@ -29,7 +29,7 @@ embargoed.willbeuntil=Version provisoire : sera sous embargo jusqu'en
 embargo.date.invalid=La date est en dehors de la plage permise : ({0} à {1})
 embargo.date.required=Une date d'embargo est requise
 cancel=Annuler
-ok=ok
+ok=OK
 saveChanges=Enregistrer les modifications
 acceptTerms=Accepter
 submit=Soumettre
